更改评论为友言

--- a/关于我.md
+++ b/关于我.md
@@ -4,9 +4,11 @@ title: 关于我
 permalink: /about/
 ---
 
-一个中学文科老教师，喜爱技术。对linux,c,golang和emacs情有独钟。希望各位达人不吝教我。
+一个中学文科老教师，喜爱技术。对linux,c,golang和emacs痴情不已，折腾不息。希望各位达人不吝教我。
+
 这个小站是今年国庆接触jekyll后弄的，很简陋，也很简便，我很喜欢。
 
+今后我将会不时地记录在折腾过程中碰到的问题和四处千寻的结果，记下来，也是一种生活。
 
 You can find the source code for the Jekyll new theme at: [github.com/jglovier/jekyll-new](https://github.com/jglovier/jekyll-new)
 
